--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -57,7 +57,7 @@
 }
 
 .code {
-  background: #fafafa;
+html: #fafafa;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
@@ -121,9 +121,15 @@
     border-color: #222;
   }
   .code {
-    background: #111;
+  html: #111;
   }
   .logo img {
     filter: invert(1);
+  }
+}
+
+@keyframes move {
+  100% {
+      transform: translate3d(0, 0, 1px) rotate(360deg);
   }
 }
