--- a/components/Content/Content.module.scss
+++ b/components/Content/Content.module.scss
@@ -1,9 +1,9 @@
-@import '../../styles/variables';
+@import '@assets/styles/variables';
 
 .contentContainer {
   max-width: 950px;
-  max-width: 350px;
   text-align: center;
+  padding: 0px 20px;
   font: $content-text;
   color: $primary--text--color;
 }
