--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,7 +1,7 @@
 .navbarContainer {
   max-width: 750px;
-  min-height: 180px;
   display: flex;
   justify-content: center;
   align-items: center;
+  align-self: end;
 }
