--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -19,7 +19,22 @@ a {
   text-decoration: none;
 }
 
+main {
+  @media (max-width: 500px) {
+    width: 100%;
+  }
+
+  @media (min-width: 500px) and (max-width: 600px) {
+    width: 90%;
+  }
+
+  @media (min-width: 600px) and (max-width: 786px) {
+    width: 80%;
+  }
+}
+
 a, button {
+  
   &:hover {
     cursor: url('/assets/custom-cursor/CustomPointer.png'), auto;
   }
