--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -44,6 +44,10 @@ a, button {
   box-sizing: border-box;
 }
 
+.Toastify__toast--info {
+  font-family: 'Gilroy-Light';
+}
+
 @font-face {
   font-family: "Gilroy-ExtraBold";
   src: url("/assets/fonts/Gilroy-ExtraBold.otf");
