--- a/components/Content/Content.module.scss
+++ b/components/Content/Content.module.scss
@@ -6,4 +6,8 @@
   padding: 0px 20px;
   font: $content-text;
   color: $primary--text--color;
+
+  @media (max-width: 519px) {
+    margin-top: 30px;
+  }
 }
