--- a/components/NavElement/NavElement.module.scss
+++ b/components/NavElement/NavElement.module.scss
@@ -11,6 +11,7 @@
   @media (max-width: 786px) {
     font-size: 20px;
     margin: 0px 18px;
+    padding-top: 10px;
   }
 
   @media (max-width: 519px) {
